// =============================================
// 模块2：活动流程模块 ER 图（简化版）
// =============================================

Table user {
  id BIGINT [primary key]
  username VARCHAR(32) [unique, not null]
  nickname VARCHAR(32)
  role TINYINT [not null, default: 0, note: '0普通用户 1组织者 2管理员']
  status TINYINT [not null, default: 1, note: '0禁用 1正常']
}

Table activity {
  id BIGINT [primary key]
  title VARCHAR(128) [not null]
  organizer_id BIGINT [not null]
  route_id BIGINT
  activity_date DATE [not null]
  difficulty_level TINYINT [not null, default: 1, note: '1休闲 2简单 3中等 4困难 5极限']
  max_participants INT [not null, default: 20]
  current_participants INT [not null, default: 0]
  status TINYINT [not null, default: 0, note: '0草稿 1待审核 2已发布 3进行中 4已结束 5已取消 6已驳回']
}

Table route {
  id BIGINT [primary key]
  name VARCHAR(128) [not null]
  creator_id BIGINT [not null]
  difficulty_level TINYINT [not null, default: 1, note: '1休闲 2简单 3中等 4困难 5极限']
  total_distance DECIMAL(6,2) [note: '公里']
  status TINYINT [not null, default: 1, note: '0禁用 1正常']
}

Table registration {
  id BIGINT [primary key]
  user_id BIGINT [not null]
  activity_id BIGINT [not null]
  status TINYINT [not null, default: 0, note: '0待审核 1已通过 2已拒绝 3候补中 4已取消 5已缺席']
  queue_number INT
  remark VARCHAR(256)
}

Table gathering_plan {
  id BIGINT [primary key]
  activity_id BIGINT [unique, not null]
  gathering_time DATETIME [not null]
  gathering_address VARCHAR(256) [not null]
  gathering_latitude DECIMAL(10,7)
  gathering_longitude DECIMAL(10,7)
  transport_guide VARCHAR(512)
  items_to_bring VARCHAR(512)
  notice TEXT
  organizer_phone VARCHAR(16)
  is_published TINYINT [not null, default: 0, note: '0否 1是']
}

Table review {
  id BIGINT [primary key]
  user_id BIGINT [not null]
  activity_id BIGINT [not null]
  overall_rating TINYINT [not null, note: '1-5星']
  route_rating TINYINT [note: '1-5星']
  organization_rating TINYINT [note: '1-5星']
  safety_rating TINYINT [note: '1-5星']
  content VARCHAR(512)
  is_anonymous TINYINT [not null, default: 0, note: '0否 1是']
}

Table message {
  id BIGINT [primary key]
  user_id BIGINT [not null]
  title VARCHAR(128) [not null]
  content VARCHAR(512) [not null]
  message_type TINYINT [not null, default: 1, note: '1系统通知 2报名通知 3活动通知 4预警通知']
  related_id BIGINT
  related_type VARCHAR(32)
  is_read TINYINT [not null, default: 0, note: '0否 1是']
}

// 用户与活动关系
Ref: user.id > activity.organizer_id
Ref: user.id > registration.user_id
Ref: user.id > route.creator_id
Ref: user.id > review.user_id
Ref: user.id > message.user_id

// 活动与其他表的关系
Ref: activity.id - gathering_plan.activity_id
Ref: activity.route_id > route.id
Ref: activity.id > registration.activity_id
Ref: activity.id > review.activity_id
